# shelter

./: .coveragerc  .editorconfig  .env.sample  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  TASK.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
shelter/: asgi.py  money.py  settings.py  urls.py  wsgi.py
shelter/deposits/: factories.py  models.py  services.py  tasks.py
shelter/deposits/migrations/: 0001_initial.py  0002_auto_20220319_0632.py  0002_payout.py
shelter/deposits/tests/: test_services.py
shelter/payment_systems/: models.py  repository.py  services.py  superpay.py  views.py
shelter/payment_systems/tests/: test_callback.py
shelter/transactions/: factories.py  models.py  services.py  tasks.py
shelter/transactions/migrations/: 0001_initial.py  0002_auto_20220320_0502.py
shelter/transactions/tests/: test_services.py
shelter/wallets/: factories.py  models.py  services.py
shelter/wallets/migrations/: 0001_initial.py  0002_alter_wallet_unique_together.py
shelter/wallets/tests/: test_services.py
