[tool.poetry]
name = "shelter"
version = "0.1.0"
description = "shelter"
authors = ["ms.sogomonyan@gmail.com"]

[tool.black]
target-version = ['py37']
line-length = 88

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.12"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
django-cors-headers = "^3.4.0"
djangorestframework = "^3.13.1"
celery = "^5.2.3"

[tool.poetry.dev-dependencies]
flake8-black = "^0.3.2"
flake8-isort = "^4.1.1"
isort = "^5.2.2"
pytest = "^6.0.1"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
mypy = "= 0.910"
django-stubs = "^1.8.0"
factory_boy = "^2.12.0"
responses = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
